src/main/resources/static/css/style.css
/*
    ADDITIONAL DEMO STYLE, NOT IMPORTANT TO MAKE THINGS WORK BUT TO MAKE IT A BIT NICER :)
*/

@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";

* {
    margin: 0;
    padding: 0;
}

body, html {
    font-family: 'Poppins', sans-serif;
    background: #fafafa;
    height: 100%;
    overflow-y: hidden;
}

#sidebar p {
    font-family: 'Poppins', sans-serif;
    font-size: 1.1em;
    font-weight: 300;
    line-height: 1.7em;
    color: #999;
}

#sidebar a, #sidebar a:hover, #sidebar a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.7s;
}

#sidebar-collapses {
    transition: all 0.3s;
}

#sidebar {
    background: #4e5369;
    color: #fff;
    transition: all 0.3s;
}

#sidebar .sidebar-header {
    padding: 20px;
}

#sidebar ul.components {
    padding: 20px 0;
    border-bottom: 1px solid #47748b;
}

#sidebar ul p {
    color: #fff;
    padding: 10px;
}

#sidebar ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
}

#sidebar ul li a:hover {
    color: #7386D5;
    background: #fff;
}

#sidebar ul li.active > a, a[aria-expanded="true"] {
    color: #fff;
    background: #6d7fcc;
}

#sidebar ul ul a {
    font-size: 0.9em !important;
    padding-left: 30px !important;
    background: #6d7fcc;
}

.row {
    height: 100% !important;
}

.col-3 {
    z-index: 1;
    height: 100%;
}

#successBox{
    padding-left:0;
}

#sidebar a[data-toggle="collapse"] {
    position: relative;
}

#sidebar .dropdown-toggle::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

#sidebar {
    min-width: 250px;
    max-width: 250px;
}
.li.category-list-item{
    display: grid;
    grid-template: auto / 75px 1fr;
    padding: 1em 0;
    border-bottom: 1px solid rgba(0, 0, 0, .125);

}
.form-control {
    display: block;
    width: 100%;
    height: calc(2.25rem + 2px);
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

.wrapper {
    display: flex;
    align-items: stretch;
}

#sidebar {
    min-width: 320px;
    max-width: 320px;
}
#addButton{
    margin-bottom:3.5em;
}


#sidebar.active {
    margin-left: -250px;
}

main, .wrapper {
    height: 100%;
}

i {
    font-size: 1.5rem;
}

.hidden {
    opacity: 0;
    -webkit-transition: opacity 0.5s ease;
    -moz-transition: opacity 0.5s ease;
    -ms-transition: opacity 0.5s ease;
    -o-transition: opacity 0.5s ease;
    transition: opacity 0.5s ease;
    transition-delay: 0.2s;
}

.container-fluid {
    padding-left: 0;
    margin-left: 0;
    height: 100%;
}

#textArea {
    position: relative;
    margin-top: 12em;
    width: 100%;
}

.form-field {
    display: block;
    margin-bottom: 16px;
    caret-color: #4e5369;
}

.form-field--is-active .form-field-control::after {
    border-bottom: 2px solid #6d7fcc;
    transform: scaleX(150);
}

.form-field--is-active .form-field-label {
    color: #4e5369;
    font-size: 0.75rem;
    transform: translateY(-14px);
}

.form-field--is-filled .form-field-label {
    font-size: 0.75rem;
    transform: translateY(-14px);
}

.form-field-label {
    display: block;
    font-size: 1.2rem;
    font-weight: normal;
    left: 0;
    margin: 0;
    padding: 18px 12px 0;
    position: absolute;
    top: 0;
    transition: all 0.4s;
    width: 100%;
    cursor: text;
}

.form-field-control {
    border-radius: 8px 8px 0 0;
    overflow: hidden;
    position: relative;
    width: 100%;
}

.form-field-control::after {
    border-bottom: 2px solid #6d7fcc;
    bottom: 0;
    content: "";
    display: block;
    left: 0;
    margin: 0 auto;
    position: absolute;
    right: 0;
    transform: scaleX(0);
    transition: all 0.4s;
    width: 1%;
}

.form-field-input,
.form-field-textarea {
    appearance: none;
    background: transparent;
    border: 0;
    border-bottom: 2px solid #4e5369;
    color: #fff;
    display: block;
    font-size: 1.2rem;
    margin-top: 24px;
    outline: 0;
    padding: 0 12px 10px 12px;
    width: 100%;
}

.form-field-textarea {
    height: 150px;
}

.custom-select {
    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='white' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right .75rem center/8px 10px;
    background-color: #4e5369 !important;
    color: #fff;
}

.model-submit {
    background-color: #6d7fcc !important;
    margin-top: 2em;
}

@media only screen and (max-width: 800px) {

}
.hiddenLeft{
    margin-left:-320px;
}
#searchBar{
    margin:auto!important;
    margin-top:-45px!important;
}
#menuHide{
    margin-right:-49px;
    text-align:right;
    z-index:1;
}

